# NWB-epoch-info-xop

./: .clang-format  .gitlab-ci.yml  .gitmodules  README.md  build_debug.bat  build_hdf5.bat  build_hdf5_debug.bat  build_hdf5_x64_debug.bat  build_hdf5_x64_release.bat  build_hdf5_x86_debug.bat  build_hdf5_x86_release.bat  build_release.bat  build_x64_debug.bat  build_x64_release.bat  build_x86_release.bat
XOPSupport/: IgorErrors.h  IgorXOP.h  NamedFIFO.h  WMTypes.h  XOP.h  XOPContainers.c  XOPContainers.h  XOPDataFolderAccess.c  XOPDialogsMac.c  XOPDialogsWin.c  XOPFileNavigationMac.c  XOPFileNavigationWin.c  XOPFiles.c  XOPFilesMac.c  XOPFilesWin.c  XOPMemory.c  XOPMenus.c  XOPNumericConversion.c  XOPResources.h  XOPStandardHeaders.h  XOPSupport.c  XOPSupport.h  XOPSupportMac.c  XOPSupportMac.h  XOPSupportWin.c  XOPSupportWin.h  XOPTextUtilityWindows.c  XOPTypes.r  XOPWaveAccess.c  XOPWinMacSupport.h  XOPWindows.c  XOPWindows.h
XOPSupport/VC/: XOPSupport.lib  XOPSupport.sln  XOPSupport.vcxproj  XOPSupport64.lib
XOPSupport/Xcode/: Note.txt
XOPSupport/Xcode/XOPSupport.xcodeproj/: project.pbxproj
help/: mies-nwb2-compound-XOP Help.ihf
src/: CMakeLists.txt  CustomExceptions.cpp  CustomExceptions.h  Helpers.cpp  Helpers.h  Operations.h  functions.cpp  functions.h  functions.rc  mies-nwb2-compound-XOP_handler.cpp  mies-nwb2-compound-XOP_handler.h  mies-nwb2-compound-XOP_xop.cpp  mies-nwb2-compound-XOP_xop.h  mies-nwb2-compound-XOP_xop.r  mies-nwb2-compound-XOP_xop.rc  mies-nwb2-compound-XOP_xopWinCustom.rc  resource.h  xop_errors.h  xop_errors.ipf
tests/: Experiment.pxp  main.ipf  test_existing.h5  test_fresh.h5  test_ipnwb.ipf
xop_generator/: CMakeLists.txt  CustomExceptions.cpp  CustomExceptions.h  ErrorsHeader.def  HandlerHeader.def  HandlerHeaderFunctionBlock.def  HandlerHeaderOperationBlock.def  HandlerTemplate.def  HandlerTemplateFunctionsBlock.def  HandlerTemplateHeaderBlock.def  Helpers.cpp  Helpers.h  IgorConsts.def  IgorConstsCommonErrorBlock.def  IgorConstsErrorNumberBlock.def  Operation-Template-Generator.pxp  Operations.inp  OperationsTemplate.def  ResourceMac.def  ResourceMacCommonErrorBlock.def  ResourceMacOperationsBlock.def  ResourceWinCustom.def  ResourceWinCustomCommonErrorBlock.def  ResourceWinCustomOperationsBlock.def  XOP_Generator.ipf  errors.inp  functionBodys.cpp  functions.cpp  functions.h  functions.r  functions.rc  mainFileResource.def  mainFileResourceFileInfoBlock.def  mainFileResourceIncludeBlock.def  mainFileResourceTextIncludeBlock.def  mainFileTemplate.def  mainFileTemplateFunctionCallsBlock.def  mainFileTemplateHeaderIncludesBlock.def  mainFileTemplateOperationCallsBlock.def  mainFileTemplateRegisterOperationsBlock.def  (+2 more)
xop_generator/cmake/: getCIndexVersion.c
